<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="200dp"
            android:layout_centerInParent="false">

            <ImageView
                android:id="@+id/game_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/add_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Add Game Image Here"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_alignBottom="@+id/game_image_view"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_game_name"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_game_name"
                    android:inputType="textCapWords" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/edit_game_price"
                        style="@style/EditorFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:hint="@string/hint_game_price"
                        android:inputType="textCapWords" />

                    <!-- Units for weight (kg) -->
                    <TextView
                        android:id="@+id/label_price_units"
                        style="@style/EditorUnitsStyle"
                        android:text="@string/unit_game_price" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Gender category -->
        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_genre" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Measurement category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_measurement" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <Button
                    android:id="@+id/subtract_button"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/edit_game_instock"
                    android:layout_alignBottom="@+id/edit_game_instock"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="-" />

                <EditText
                    android:id="@+id/edit_game_instock"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_game_inStock"
                    android:inputType="number"
                    android:maxLength="3"
                    android:layout_alignBaseline="@+id/label_weight_units"
                    android:layout_alignBottom="@+id/label_weight_units"
                    android:layout_toRightOf="@+id/subtract_button"
                    android:layout_alignRight="@+id/label_weight_units"
                    android:layout_alignEnd="@+id/label_weight_units" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_alignTop="@+id/edit_game_instock"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/label_weight_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_game_quantity"
                    android:layout_marginRight="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/add_button"
                    android:layout_toStartOf="@+id/add_button"
                    android:layout_alignParentTop="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/editor_activity_order_from_supplier_button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_order_from_supplier" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
